<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="hendrawd.ganteng.movieinfo.activity.MainActivity">

    <item
        android:icon="@android:drawable/ic_menu_search"
        android:id="@+id/menu_search"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView"/>

    <item
        android:id="@+id/menu_category_popular"
        android:title="@string/category_popular"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_category_top_rated"
        android:title="@string/category_top_rated"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_category_upcoming"
        android:title="@string/category_upcoming"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_show_favorites"
        android:title="@string/show_favorites"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_about"
        android:title="@string/about"
        app:showAsAction="never"/>
</menu>