<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="false"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="false"
            app:contentInsetStartWithNavigation="0dp"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="exitUntilCollapsed|scroll">

            <ProgressBar
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:indeterminate="true" />

            <hendrawd.ganteng.movieinfo.view.AutoFitImageView
                android:id="@+id/iv_backdrop_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="false"
                android:scaleType="fitCenter"
                android:transitionName="image"
                app:layout_collapseMode="parallax"
                tools:targetApi="lollipop" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryLight"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/medium_padding"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical|left"
                    android:text="@string/original_title"
                    android:textColor="@color/text"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:ignore="RtlHardcoded" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/white" />

                <TextView
                    android:id="@+id/tv_original_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/medium_padding"
                    android:paddingRight="@dimen/medium_padding"
                    android:textColor="@color/text"
                    android:textSize="18sp"
                    tools:ignore="RtlHardcoded" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/medium_padding"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical|left"
                    android:text="@string/release_date"
                    android:textColor="@color/text"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:ignore="RtlHardcoded" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/white" />

                <TextView
                    android:id="@+id/tv_release_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/medium_padding"
                    android:paddingRight="@dimen/medium_padding"
                    android:textColor="@color/text"
                    android:textSize="18sp"
                    tools:ignore="RtlHardcoded" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/medium_padding"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical|left"
                    android:text="@string/genre"
                    android:textColor="@color/text"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:ignore="RtlHardcoded" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/white" />

                <TextView
                    android:id="@+id/tv_genre"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/medium_padding"
                    android:paddingRight="@dimen/medium_padding"
                    android:textColor="@color/text"
                    android:textSize="18sp"
                    tools:ignore="RtlHardcoded" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/medium_padding">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical|left"
                    android:text="@string/rating"
                    android:textColor="@color/text"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:ignore="RtlHardcoded" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/white" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/medium_padding"
                        android:layout_marginRight="@dimen/medium_padding"
                        android:gravity="center_vertical"
                        android:textColor="@color/text"
                        android:textSize="18sp"
                        tools:ignore="RtlHardcoded" />

                    <me.zhanghai.android.materialratingbar.MaterialRatingBar
                        android:id="@+id/rating_bar"
                        style="@style/Widget.MaterialRatingBar.RatingBar.Small"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:isIndicator="true"
                        android:numStars="5" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/medium_padding"
                android:paddingRight="@dimen/medium_padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/overview"
                    android:textColor="@color/text"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/iv_speaker"
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:layout_marginLeft="@dimen/medium_padding"
                    android:background="@drawable/selector_transparent_to_white"
                    android:padding="@dimen/medium_padding"
                    android:src="@drawable/ic_speaker"
                    tools:ignore="ContentDescription,RtlHardcoded" />

                <ProgressBar
                    android:id="@+id/pb_text_to_speech"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="@dimen/medium_padding"
                    android:indeterminate="true"
                    android:visibility="gone"
                    tools:ignore="RtlHardcoded" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/medium_padding"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            <TextView
                android:id="@+id/tv_related_videos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:padding="@dimen/medium_padding"
                android:text="@string/related_videos"
                android:textColor="@color/text"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/ll_video_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

            <TextView
                android:id="@+id/tv_latest_reviews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:padding="@dimen/medium_padding"
                android:text="@string/latest_reviews"
                android:textColor="@color/text"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/ll_review_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>