<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:fitsSystemWindows="false"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools">

    <android.support.design.widget.CoordinatorLayout
        android:fitsSystemWindows="false"
        android:id="@+id/main_content"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:visibility="gone">

        <android.support.design.widget.AppBarLayout
            android:fitsSystemWindows="false"
            android:id="@+id/appbar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.design.widget.CollapsingToolbarLayout
                android:fitsSystemWindows="false"
                android:id="@+id/collapsing_toolbar"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                app:contentInsetStartWithNavigation="0dp"
                app:contentScrim="?attr/colorPrimary"
                app:expandedTitleMarginEnd="64dp"
                app:expandedTitleMarginStart="48dp"
                app:layout_scrollFlags="exitUntilCollapsed|scroll">

                <ProgressBar
                    android:indeterminate="true"
                    android:layout_gravity="center"
                    android:layout_height="20dp"
                    android:layout_width="20dp"/>

                <hendrawd.ganteng.movieinfo.view.AutoFitImageView
                    android:fitsSystemWindows="false"
                    android:id="@+id/iv_backdrop_image"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:scaleType="fitCenter"
                    android:transitionName="image"
                    app:layout_collapseMode="parallax"
                    tools:targetApi="lollipop"/>

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_width="match_parent"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

                    <ImageView
                        android:id="@+id/button_menu"
                        android:layout_gravity="right"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:minHeight="48dp"
                        android:minWidth="48dp"
                        android:scaleType="centerInside"
                        android:src="@drawable/ic_action_overflow"/>
                </android.support.v7.widget.Toolbar>

            </android.support.design.widget.CollapsingToolbarLayout>

        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:background="@color/colorPrimaryLight"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

            <LinearLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:background="@color/colorPrimaryDark"
                    android:gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:padding="@dimen/medium_padding"
                    android:weightSum="2">

                    <TextView
                        android:gravity="center_vertical|left"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:text="@string/original_title"
                        android:textColor="@color/text"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        tools:ignore="RtlHardcoded"/>

                    <View
                        android:background="@android:color/white"
                        android:layout_height="match_parent"
                        android:layout_width="1dp"/>

                    <TextView
                        android:gravity="center_vertical"
                        android:id="@+id/tv_original_title"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:paddingLeft="@dimen/medium_padding"
                        android:paddingRight="@dimen/medium_padding"
                        android:textColor="@color/text"
                        android:textSize="18sp"
                        tools:ignore="RtlHardcoded"/>
                </LinearLayout>

                <LinearLayout
                    android:background="@color/colorPrimary"
                    android:gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:padding="@dimen/medium_padding"
                    android:weightSum="2">

                    <TextView
                        android:gravity="center_vertical|left"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:text="@string/release_date"
                        android:textColor="@color/text"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        tools:ignore="RtlHardcoded"/>

                    <View
                        android:background="@android:color/white"
                        android:layout_height="match_parent"
                        android:layout_width="1dp"/>

                    <TextView
                        android:gravity="center_vertical"
                        android:id="@+id/tv_release_date"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:paddingLeft="@dimen/medium_padding"
                        android:paddingRight="@dimen/medium_padding"
                        android:textColor="@color/text"
                        android:textSize="18sp"
                        tools:ignore="RtlHardcoded"/>
                </LinearLayout>

                <LinearLayout
                    android:background="@color/colorPrimaryDark"
                    android:gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:padding="@dimen/medium_padding"
                    android:weightSum="2">

                    <TextView
                        android:gravity="center_vertical|left"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:text="@string/genre"
                        android:textColor="@color/text"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        tools:ignore="RtlHardcoded"/>

                    <View
                        android:background="@android:color/white"
                        android:layout_height="match_parent"
                        android:layout_width="1dp"/>

                    <TextView
                        android:gravity="center_vertical"
                        android:id="@+id/tv_genre"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:paddingLeft="@dimen/medium_padding"
                        android:paddingRight="@dimen/medium_padding"
                        android:textColor="@color/text"
                        android:textSize="18sp"
                        tools:ignore="RtlHardcoded"/>
                </LinearLayout>

                <LinearLayout
                    android:background="@color/colorPrimary"
                    android:gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:padding="@dimen/medium_padding">

                    <TextView
                        android:gravity="center_vertical|left"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:text="@string/rating"
                        android:textColor="@color/text"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        tools:ignore="RtlHardcoded"/>

                    <View
                        android:background="@android:color/white"
                        android:layout_height="match_parent"
                        android:layout_width="1dp"/>

                    <LinearLayout
                        android:gravity="center_vertical"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:orientation="horizontal">

                        <TextView
                            android:gravity="center_vertical"
                            android:id="@+id/tv_rating"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/medium_padding"
                            android:layout_marginRight="@dimen/medium_padding"
                            android:layout_width="wrap_content"
                            android:textColor="@color/text"
                            android:textSize="18sp"
                            tools:ignore="RtlHardcoded"/>

                        <me.zhanghai.android.materialratingbar.MaterialRatingBar
                            android:id="@+id/rating_bar"
                            android:isIndicator="true"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:numStars="5"
                            style="@style/Widget.MaterialRatingBar.RatingBar.Small"/>
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:background="@color/colorPrimaryDark"
                    android:gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/medium_padding"
                    android:paddingRight="@dimen/medium_padding">

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/overview"
                        android:textColor="@color/text"
                        android:textSize="18sp"
                        android:textStyle="bold"/>

                    <ImageView
                        android:background="@drawable/selector_transparent_to_white"
                        android:id="@+id/iv_speaker"
                        android:layout_height="44dp"
                        android:layout_marginLeft="@dimen/medium_padding"
                        android:layout_width="44dp"
                        android:padding="@dimen/medium_padding"
                        android:src="@drawable/ic_speaker"
                        tools:ignore="ContentDescription,RtlHardcoded"/>

                    <ProgressBar
                        android:id="@+id/pb_text_to_speech"
                        android:indeterminate="true"
                        android:layout_height="20dp"
                        android:layout_marginLeft="@dimen/medium_padding"
                        android:layout_width="20dp"
                        android:visibility="gone"
                        tools:ignore="RtlHardcoded"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_overview"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/medium_padding"
                    android:layout_width="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

                <TextView
                    android:background="@color/colorPrimary"
                    android:id="@+id/tv_related_videos"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:padding="@dimen/medium_padding"
                    android:text="@string/related_videos"
                    android:textColor="@color/text"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:visibility="gone"/>

                <LinearLayout
                    android:id="@+id/ll_video_container"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="vertical">
                </LinearLayout>

                <TextView
                    android:background="@color/colorPrimary"
                    android:id="@+id/tv_latest_reviews"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:padding="@dimen/medium_padding"
                    android:text="@string/latest_reviews"
                    android:textColor="@color/text"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:visibility="gone"/>

                <LinearLayout
                    android:id="@+id/ll_review_container"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="vertical">
                </LinearLayout>

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

    </android.support.design.widget.CoordinatorLayout>

    <TextView
        android:id="@+id/tv_empty"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/no_movie_selected"
        android:textColor="@color/secondaryText"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible"/>

</RelativeLayout>